first merge with issues

--- a/index.html
+++ b/index.html
@@ -23,8 +23,15 @@
     <!-- Section 1 -->
 
     <!-- Section 2 -->
-
-    Test
+    <div class="sec2">
+      <h2>LET'S GO</h2>
+      <div id="text_claim">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vivamus lacinia
+        odio vitae vestibulum vestibulum.
+      </div>
+      <div id="threecards">CARDS</div>
+      <button>SHOW MORE</button>
+    </div>
 
     <!-- Section 3 -->
 
