--- a/index.html
+++ b/index.html
@@ -1,41 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com%22%3E/">
-    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&family=Quicksand:wght@300;700&family=Roboto:ital,wght@0,100;0,400;0,700;1,500&display=swap" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com%22%3E/" />
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&family=Quicksand:wght@300;700&family=Roboto:ital,wght@0,100;0,400;0,700;1,500&display=swap"
+      rel="stylesheet"
+    />
     <!--Bootstrap-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <title>Document</title>
-</head>
-<body>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
+      crossorigin="anonymous"
+    />
+    <!--Icon-->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <title>Hiking</title>
+  </head>
+  <body>
     <!-- Section 1 -->
-
+    <nav>
+      <div id="with-logo">
+        <div><img src="assets/logo.png" width="100px" height="100px" /></div>
+        <div id="with-nav">
+          <ul>
+            <li><a href="#">HOME</a></li>
+            <li><a href="#">MENU</a></li>
+            <li><a href="#">OUR STORY</a></li>
+            <li><a href="#">CONTACT US</a></li>
+          </ul>
+        </div>
+        <div class="searchbar">
+          <form>
+            <input type="search" name="" class="searchinput" />
+            <span class="fa-solid fa-magnifying-glass"></span>
+          </form>
+        </div>
+      </div>
+    </nav>
+    <section>
+      <div id="page-1">
+        <div id="page1-text">
+          <div id="text-h1">
+            <h1>IT'S TIME FOR HIKING</h1>
+            <h3>Lorem ipsum dolor</h3>
+          </div>
+          <div id="text-but">
+            <button>READ MORE</button>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam
+              consectetur incidunt atque doloribus, accusantium fugit
+              dignissimos ipsam possimus tenetur commodi minima corrupti
+              cupiditate iusto vel cumque velit nisi autem! Ipsum!
+            </p>
+          </div>
+        </div>
+        <div></div>
+      </div>
+    </section>
 
     <!-- Section 2 -->
 
-
     <!-- Section 3 -->
-
 
     <!-- Section 4 -->
 
-
     <!-- Section 5 -->
 
-
     <!-- Section 6 -->
-
-
+    <section>
+      <div id="page-6">
+        <i class="fa-solid fa-quote-left fa-xl"></i>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis,
+          adipisci? Magni unde laudantium saepe, odit recusandae officiis alias?
+          Error libero dolor ex itaque odio eos aspernatur enim eveniet earum
+          eum.
+        </p>
+        <p>Lorem Ipsum</p>
+        p>
+      </div>
+    </section>
     <!-- Section 7 -->
-
 
     <!-- Section 8 -->
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://kit.fontawesome.com/dbf8a03f8b.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
