--- a/index.html
+++ b/index.html
@@ -32,10 +32,62 @@
 
 
     <!-- Section 7 -->
-
-
+    <div class="container-fluid1">
+    <div class="row footer-row">
+        <div class="col-12 footer-col-12">
+          <form>
+              <h2>Title Here</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi adipisci esse non est deleniti nihil blanditiis ratione, recusandae vero dolor ad unde nobis mollitia, illo, ea nulla perspiciatis ipsam cupiditate?</p>
+                  <input id="newsletter" type="text" placeholder="Your Email">
+                  <button type="button">Subscribe</button>
+          </form>
+        </div>
+        </div>
+        <div class="row footer-row">
+            <div class="col-12 footer-col-12">
+            <img src="assets/picture2_shape_bottom.png"/>
+            </div>
+</div>
+    </div>
     <!-- Section 8 -->
-
+    <div class="container-fluid">
+        <div class="row footer-row">
+            <div class="col-3 footer-col-3">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt, tempora. Eveniet delectus dignissimos beatae aut suscipit nisi soluta rerum dicta, dolorum deleniti cupiditate facere enim consectetur, eum laboriosam eaque voluptas!</p>
+                  <a href="#"><img src="icons/facebook.png" width="25px" height="25px"/></a>
+                  <a href="#"><img src="icons/instagram.png" width="25px" height="25px"></a>
+                  <a href="#"><img src="icons/twitter.jpg" width="25px" height="25px"></a>
+                </div>
+          <div class="col-3 footer-col-3">
+            <ul>
+                <li><a href="#">About</a></li>
+                  <li><a href="#">History</a></li>
+                    <li><a href="#">Our Team</a></li>
+                      <li><a href="#">BrandGuidlines</a></li>
+                        <li><a href="#" >Terms&Condition</a></li>
+                        <li><a href="#" >Privacy Policy</a></li>
+            </ul>
+          </div>
+          <div class="col-3 footer-col-3">
+            <ul>
+                <li><a href="#">Services</a></li>
+                  <li><a href="#">How to Order</a></li>
+                    <li><a href="#">Our Product</a></li>
+                      <li><a href="#">Order Status</a></li>
+                        <li><a href="#" >Promo</a></li>
+                        <li><a href="#" >Payment Method</a></li>
+            </ul>
+          </div>
+          <div class="col-3 footer-col-3">
+            <ul>
+                <li><a href="#">Others</a></li>
+                  <li><a href="#">Contact Us</a></li>
+                    <li><a href="#">Help</a></li>
+                    <li><a href="#">Privacy</a></li>
+            </ul>
+          </div>
+        </div>
+        </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
 </html>
