--- a/index.html
+++ b/index.html
@@ -29,7 +29,26 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Vivamus lacinia
         odio vitae vestibulum vestibulum.
       </div>
-      <div id="threecards">CARDS</div>
+      <div id="threecards">
+        <div class="small_card">
+          <img class="card_img" src="../PSD_group9/assets/sec2_left.png" />
+          <div class="card_text">
+            <b>Lorem ipsum</b>Lorem ipsum dolor sit amet consectetur
+          </div>
+        </div>
+        <div class="small_card">
+          <img class="card_img" src="../PSD_group9/assets/sec2_middle.png" />
+          <div class="card_text">
+            <b>Lorem ipsum</b>Lorem ipsum dolor sit amet consectetur
+          </div>
+        </div>
+        <div class="small_card">
+          <img class="card_img" src="../PSD_group9/assets/sec2_right.png" />
+          <div class="card_text">
+            <b>Lorem ipsum</b>Lorem ipsum dolor sit amet consectetur
+          </div>
+        </div>
+      </div>
       <button>SHOW MORE</button>
     </div>
 
