--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@
 </div>
     </div>
     <!-- Section 8 -->
-    <div class="container-fluid">
-        <div class="row footer-row">
+    <div class="container-fluid2">
+        <div class="row footer-row1">
             <div class="col-3 footer-col-3">
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt, tempora. Eveniet delectus dignissimos beatae aut suscipit nisi soluta rerum dicta, dolorum deleniti cupiditate facere enim consectetur, eum laboriosam eaque voluptas!</p>
                   <a href="#"><img src="icons/facebook.png" width="25px" height="25px"/></a>
