--- a/index.html
+++ b/index.html
@@ -151,15 +151,19 @@
     <!-- Section 6 -->
     <section>
       <div id="page-6">
+        <div id="page6-text">
         <i class="fa-solid fa-quote-left fa-xl"></i>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis,
+          Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          <br />
+          Facilis,
           adipisci? Magni unde laudantium saepe, odit recusandae officiis alias?
+          <br />
           Error libero dolor ex itaque odio eos aspernatur enim eveniet earum
           eum.
         </p>
         <p>Lorem Ipsum</p>
-        p>
+        </div>
       </div>
     </section>
 
